<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/searchBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchBanner"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="true"
        android:hint="@string/editText"
        android:inputType="textUri" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/searchEnterUser"
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:clickable="true"
        android:text="@string/searchUser" />
    
    <Button
        android:id="@+id/searchEnterUrl"
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:clickable="true"
        android:text="@string/searchUrl" />

</LinearLayout>