<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/searchB"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:clickable="true"
        android:text="@string/search" />
    
    <Button
        android:id="@+id/onlineB"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:clickable="true"
        android:text="@string/online" />

    <Button
        android:id="@+id/favouritesB"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:clickable="true"
        android:text="@string/favourite" />

</LinearLayout>